fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -190,6 +190,10 @@ body {
   font-weight: 200;
 }
 
+.software h4 {
+  font-size: 25px;
+}
+
 .software a {
   font-size: 20px;
 }
